--- a/app/mysample/index.html
+++ b/app/mysample/index.html
@@ -2,21 +2,20 @@
 <html ng-app="uiRouterSample">
 <head>
     <title>myuirouter</title>
+    <meta http-equiv="content-type" content="text/html;charset=utf8">
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <script type="text/javascript" src="../lib/angular/angular.min.js"></script>
-    <script type="text/javascript" src="../lib/angular-animate/angular-animate.min.js"></script>
-    <script type="text/javascript" src="../lib/angular-ui-router/release/angular-ui-router.min.js"></script>
 </head>
 <body>
 <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
         <div class="container">
-            <a class="brand" ui-sref="home">ui-router</a>
+            <a class="brand" ui-sref="home">图标的标示</a>
             <ul class="nav">
-                <li ng-class="{active: $state.includes('contacts')}"><a ui-sref="contacts.list">Contacts</a></li>
-                <li ui-sref-active="active"><a ui-sref="about">About</a></li>
+                <li ng-class="{active: $state.includes('contacts')}"><a ui-sref="contacts.list">联系人</a></li>
+                <li ui-sref-active="active"><a ui-sref="about">关于</a></li>
             </ul>
+            <!--这是一个有名字的ui-view-->
             <p ui-view="hint" class="navbar-text pull-right"></p>
         </div>
     </div>
@@ -24,9 +23,8 @@
 
 <!-- Here is the main ui-view (unnamed) and will be populated by its immediate children's templates
      unless otherwise explicitly named views are targeted. It's also employing ng-animate. -->
+<!--这个是默认的主的uiview-->
 <div ui-view class="container slide" style="padding-top: 80px;"></div>
-
-
 <hr>
     <pre>
       <!-- Here's some values to keep an eye on in the sample in order to understand $state and $stateParams -->
@@ -37,4 +35,11 @@
            display the full url for learning purposes-->
     </pre>
 </body>
+<script type="text/javascript" src="../lib/angular/angular.min.js"></script>
+<script type="text/javascript" src="../lib/angular-animate/angular-animate.min.js"></script>
+<script type="text/javascript" src="../lib/angular-ui-router/release/angular-ui-router.min.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
+<script type="text/javascript" src="js/service.js"></script>
+<script type="text/javascript" src="js/common/utils-service.js"></script>
+<script type="text/javascript" src="js/contacts.js"></script>
 </html>
