--- a/app/mysample/index.html
+++ b/app/mysample/index.html
@@ -15,7 +15,7 @@
                 <li ng-class="{active: $state.includes('contacts')}"><a ui-sref="contacts.list">联系人</a></li>
                 <li ui-sref-active="active"><a ui-sref="about">关于</a></li>
             </ul>
-            <!--这是一个有名字的ui-view-->
+            <!--这是一个有名字的ui-view用来显示当前的导航的路径-->
             <p ui-view="hint" class="navbar-text pull-right"></p>
         </div>
     </div>
